# kipo

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kipo/: cli.py
src/kipo/commands/: studio.py  version.py
src/kipo/engine/: parquet.py
src/kipo/studio/: server.py
src/kipo/studio/backend/: server.py
src/kipo/studio/frontend/: index.html
src/kipo/studio/frontend/css/: main.css
