[project]
name = "kipo"
version = "0.0.1"
description = "Visual ETL framework powered by Polars"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
