[project]
name = "kipo"
version = "0.0.1"
description = "Visual ETL framework powered by Polars"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "fastexcel>=0.20.2",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "typer>=0.26.4",
    "uvicorn>=0.48.0",
]

[project.scripts]
kipo = "kipo.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
